--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
         build:
             context: ./client
             dockerfile: Dockerfile
-        command: bash -c "npm run preview"
+        command: 'bash -c "npm run preview -- --host 0.0.0.0 --strictPort"'
         ports:
             - "4172:4173"
         depends_on:
