--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
     postgres:
         container_name: database
         ports:
-            - "5431:5432"
+            - "${POSTGRES_PORT_HOST:-5431}:5432"
         image: postgres
         environment:
             POSTGRES_USER: "${POSTGRES_USER}"
@@ -22,7 +22,7 @@ services:
             context: ./server
             dockerfile: Dockerfile
         ports:
-            - "7999:8000"
+            - "${SERVER_PORT_HOST:-7999}:8000"
         command: bash -c "npx prisma migrate reset --force && npm start"
         environment:
             DATABASE_URL: "${DATABASE_URL}"
@@ -37,6 +37,6 @@ services:
             dockerfile: Dockerfile
         command: 'bash -c "npm run preview -- --host 0.0.0.0 --strictPort"'
         ports:
-            - "4172:4173"
+            - "${CLIENT_PORT_HOST:-4172}:4173"
         depends_on:
             - server
